--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "jodit-react": "^5.2.26",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.545.0",
-    "next": "^15.5.4",
+    "next": "^15.5.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-easy-crop": "^5.5.6",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1"
